# OpenTH

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements-dev.txt
docs/: backlog.md  project-status.md  roadmap.md  theory.md  user-guide.md  vision-statement.md
examples/: blowdown_transient.py  circuit_loop.py  heat_exchanger.py  heated_pipe.py  natural_circulation.py  pipeline.json  pipeline_steady.py  pump_loop.py  quickstart.ipynb
native/: README.md
src/flowcalc/: __init__.py  benchmarks.py  cli.py  model.py
src/flowcalc/components/: __init__.py  boundary.py  pipe.py  valve.py
src/flowcalc/fluids/: __init__.py  base.py  ideal_gas.py  incompressible.py
src/flowcalc/io/: serialize.py
src/flowcalc/llm/: __init__.py  interface.py
src/flowcalc/network/: __init__.py  element.py  node.py
src/flowcalc/solver/: base.py  linear.py  pcim.py
src/openth/: __init__.py  benchmarks.py  circuit.py  cli.py  model.py
src/openth/components/: __init__.py  pipe.py  pump.py  valve.py
src/openth/fluids/: __init__.py
src/openth/io/: __init__.py  serialize.py
src/openth/llm/: interface.py
src/openth/network/: __init__.py  coupling.py  network.py  node.py
src/openth/solver/: __init__.py  base.py  pcim.py
tests/: test_api.py  test_benchmarks.py  test_buoyancy.py  test_circuit.py  test_energy.py  test_fluids.py  test_heat_exchanger.py  test_io.py  test_linear.py  test_model.py  test_network.py  test_pump.py  test_steady.py  test_transient.py
